--- a/css/AddContact.css
+++ b/css/AddContact.css
@@ -1,6 +1,7 @@
 body{
     margin:0;
     height:100%;
+    background-color:#F7F7F7
 }
 .header{
     padding: 15px 0;
@@ -36,3 +37,104 @@ body{
     margin-left: 5px;
 }
 *{ box-sizing: border-box;}
+.form-content{
+    min-height: calc(100% - 80px);
+    background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    border: 0px solid green;
+}
+.form{
+    width:65%;
+    padding:44px 60px;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border: 1px solid #f5f5f5;
+    border-radius:  8px;
+    opacity:1;
+    margin-top: 60px;
+}
+.form-head{
+    font: normal normal 24px/37px Roboto;
+    letter-spacing: 0px;
+    color: #008CFF;
+    text-transform: capitalize;
+    padding-bottom: 20px;
+    justify-content: center;
+    display: flex;
+}
+.row-content{
+    display:flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    border: 0px solid green;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+}
+.drop{
+    display: flex;
+    flex-direction: column;
+    padding-right: 150px;
+}
+.label{
+    min-width: 140px;
+}
+label{
+    padding: 5px;
+}
+.text{
+    font-size: 14px;
+    color: #42515f;
+    opacity: 1;
+    font-family: Roboto;
+}
+.input{
+    width: 100%;
+    padding:10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize:vertical;
+}
+select{
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+    font: normal normal normal 16px Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    background-color:  transparent;
+    
+}
+.button{
+    font-size: 18px;
+    font-family: Roboto;
+    letter-spacing: 0px;
+    color:#42515f;
+    opacity:1;
+    background: transparent;
+    border: none;
+    font-weight: 400;
+    min-width: 140px;
+    padding:7px 7px;
+    border: 1px solid #707070;
+    cursor: pointer;
+    border-radius: 4px;
+    background-color: #f5f5f5 ;
+}
+.buttonParent {
+    display: flex;
+    padding: 0px 100px;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-top: 20px;
+  }
+  
+.submitButton{
+    background-color: #f5f5f5 ;
+    margin-right: 30px;
+    border: 1px solid #707070;
+}
