ADDED: validation of name

--- a/css/AddContact.css
+++ b/css/AddContact.css
@@ -138,3 +138,9 @@ select{
     margin-right: 30px;
     border: 1px solid #707070;
 }
+error-output{
+    margin-left: 10px ;
+    font-size: 12px;
+    font-style: italic;
+    color:red;
+}
